Fix z-index header

--- a/2016/src/styles/layout/_header.scss
+++ b/2016/src/styles/layout/_header.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 
   @media screen and (min-width: 768px) {
     min-width: 870px;
